--- a/css/stylegrid.css
+++ b/css/stylegrid.css
@@ -357,6 +357,9 @@ a {
         display: block;
         padding: 0 3px;
     }
+    .grid2 div img {
+        width: 100%;
+    }
     .grid3,
     .grid4 {
         grid-template-columns: auto;
